# file-mapper

./: .gitignore  __init__.py  file_mapper_script.py  filemapper.py  gui.py  pyproject.toml
tests/: test_filemapper.py
